overlays/test/patches/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperclip
spec:
  template:
    spec:
      containers:
        - name: paperclip
          env:
            - name: PAPERCLIP_PUBLIC_URL
              value: "https://paperclip-paperclip-test.apps.cluster-4l6x6.4l6x6.sandbox1213.opentlc.com"
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2"
