overlays/test/patches/route-host.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: paperclip
spec:
  host: paperclip-paperclip-test.apps.cluster-4l6x6.4l6x6.sandbox1213.opentlc.com
